Linear Regression model

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -118,7 +118,7 @@
    ],
    "source": [
     "# Upload the csv salary file\n",
-    "df = pd.read_csv(\"C:/Users/Jose/Desktop/Jose/Python/Kaggle/Linear Regression/Salary_Data.csv\")\n",
+    "df = pd.read_csv(\".../Salary_Data.csv\")\n",
     "df.head(10)"
    ]
   },
